--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-
+    implementation 'com.navercorp.lucy:lucy-xss-servlet:2.0.0'
+    
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
